# keyframe_uploader

./: .gitignore  README.md
plugin/: KeyframeUploaderPlugin.server.lua
roblox_sfx_upload_system/: .gitignore  README.md  convert_opus_to_mp3.bat  upload_sfx.bat  upload_sfx.py
server/: LICENSE  README.md  build_exe.ps1  config.json  converter.py  pyproject.toml  rbxm.py  requirements.txt  rpx.py  run.ps1  server.py
server/keyframe_uploader/: __init__.py  __main__.py  opencloud.py  rpx.py  server.py
