[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "keyframe-uploader"
version = "0.1.0"
description = "Local companion server + rpx CLI for the KeyframeUploader Studio plugin"
requires-python = ">=3.8"

# `rpx` becomes a command on PATH after `pip install -e .`
[project.scripts]
rpx = "rpx:main"

# Flat layout: these single-file modules live next to pyproject.toml in server/
[tool.setuptools]
py-modules = ["rpx", "server", "rbxm", "converter", "opencloud"]
